--- a/template/08-template/css/style.css
+++ b/template/08-template/css/style.css
@@ -11,3 +11,237 @@ ol {
 a {
 	text-decoration: none;
 }
+
+header {
+	width: 100%;
+	border-bottom: 1px solid #ddd;
+}
+
+header .inner {
+	position: relative;
+	width: 1180px;
+	height: 120px;
+	margin: 0 auto;
+}
+
+header .inner h1 {
+	position: absolute;
+	left: 0px;
+	bottom: 15px;
+}
+
+header .inner h1 a {
+	font: bold 24px/1 "arial";
+	color: #444;
+}
+
+header .inner .util {
+	position: absolute;
+	top: 20px;
+	right: 30px;
+}
+
+header .inner .util li, header .inner .gnb li  {
+	float: left;
+}
+
+header .inner .util li a {
+	display: block;
+	font: 12px/1 "arial";
+	color: #999;
+	padding: 0 10px;
+}
+
+header .inner .gnb {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+}
+
+header .inner .gnb li a {
+	display: block;
+	font: bold 15px/1 "arial";
+	color: #555;
+	padding: 20px 40px;
+	transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-o-transition: all 0.5s;
+}
+
+header .inner .gnb li a:hover {
+	background: #555;
+	color: #fff;
+}
+
+figure {
+	position: relative;
+	width: 100%;
+	height: calc(100vh - 120px);
+	background: #000;
+	overflow: hidden;
+	padding-top: 250px;
+}
+
+figure video {
+	position: absolute;
+	top: 0;
+	left: 0;
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+	opacity: 0.3;
+}
+
+figure .inner {
+	position: relative;
+	width: 1180px;
+	margin: 0 auto;
+}
+
+figure .inner h1 {
+	font: normal 120px/1 "arial";
+	color: #fff;
+	margin-bottom: 20px;
+}
+
+figure .inner p {
+	font: 16px/1.4 "arial";
+	color: #888;
+	margin-bottom: 60px;
+}
+
+figure .inner a {
+	display: block;
+	font: bold 11px/30px "arial";
+	width: 400px;
+	height: 30px;
+	border: 1px solid #bbb;
+	color: #fff;
+	text-align: center;
+	letter-spacing: 1px;
+	transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	-moz-transition: all 0.5s;
+	-ms-transition: all 0.5s;
+	-o-transition: all 0.5s;
+}
+
+figure .inner a:hover {
+	background: #fff;
+	color: #555;
+}
+
+section {
+	width: 100%;
+	padding: 200px 0;
+}
+
+section .inner {
+	width: 1180px;
+	margin: 0 auto;
+}
+
+section .inner h1 {
+	font: bold 24px/1 "arial";
+	color: #555;
+	text-align: center;
+	margin-bottom: 50px;
+}
+
+section .inner .wrap {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+
+section .inner .wrap article {
+	width: 280px;
+}
+
+section .inner .wrap article h2 {
+	margin-bottom: 10px;
+}
+
+section .inner .wrap article h2 a {
+	font: bold 16px/1 "arial";
+	color: #777;
+}
+
+section .inner .wrap article p {
+	font: 14px/1.4 "arial";
+	color: #777;
+}
+
+section .inner .wrap article .picture {
+	position: relative;
+	width: 100%;
+	height: 120px;
+	background: #333;
+	margin-bottom: 15px;
+	overflow: hidden;
+}
+
+section .inner .wrap article .picture img {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+
+footer {
+	width: 100%;
+	background: #333;
+	padding: 100px 0;
+	border-top: 1px solid #888;
+}
+
+footer .inner {
+	width: 1180px;
+	margin: 0 auto;
+}
+
+footer .inner .upper {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	border-bottom: 1px solid #777;
+	padding-bottom: 20px;
+}
+
+footer .inner .upper h1 {
+	font: 24px/1 "arial";
+	color: #666;
+}
+
+footer .inner .upper ul {
+	display: flex;
+	justify-content: flex-end;
+}
+
+footer .inner .upper ul li {
+	margin-left: 20px;
+}
+
+footer .inner .upper ul li a {
+	font: bold 14px/1 "arial";
+	color: #666;
+}
+
+footer .inner .lower {
+	width: 100%;
+	padding-top: 20px;
+}
+
+footer .inner .lower address {
+	font: 12px/1.3 "arial";
+	width: 100%;
+	color: #777;
+	margin-bottom: 20px;
+}
+
+footer .inner .lower p {
+	font: 12px/1 "arial";
+	width: 100%;
+	color: #777;
+}
