--- a/template/09-template/css/style.css
+++ b/template/09-template/css/style.css
@@ -6,5 +6,230 @@
 	padding: 0px;
 }
 
+body {
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	background: #b1e1e2;
+	animation: sky infinite linear 20s;
+	-webkit-animation: sky infinite linear 20s;
+}
+
+h1 {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 1000px;
+	transform: translate(-50%, 150%);
+	-webkit-transform: translate(-50%, 150%);
+	-moz-transform: translate(-50%, 150%);
+	-ms-transform: translate(-50%, 150%);
+	-o-transform: translate(-50%, 150%);
+	font: 92px/1 "Poiret one";
+	color: #fff;
+	text-align: center;
+}
+
+section {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 1000px;
+	height: 400px;
+	transform: translate(-50%, -70%);
+	-webkit-transform: translate(-50%, -70%);
+	-moz-transform: translate(-50%, -70%);
+	-ms-transform: translate(-50%, -70%);
+	-o-transform: translate(-50%, -70%);
+}
+
+section .sky {
+	position: absolute;
+	width: 100%;
+}
+
+section .sky .sun {
+	position: absolute;
+	top: -150px;
+	left: 50%;
+	margin-left: -100px;
+	transform-origin: center 500px;
+	animation: sun infinite linear 20s;
+	-webkit-animation: sun infinite linear 20s;
+}
+
+section .sky .cloud1 {
+	position: absolute;
+	top: -30px;
+	left: 10%;
+	animation: flow infinite linear 10s;
+	-webkit-animation: flow infinite linear 10s;
+}
+
+section .sky .cloud2 {
+	position: absolute;
+	top: 20px;
+	left: 0;
+	animation: flow infinite linear 20s;
+	-webkit-animation: flow infinite linear 20s;
+}
+
+section .town .circle {
+	position: absolute;
+	bottom: 104px;
+	left: 50%;
+	margin-left: -165px;
+	opacity: 0.7;
+	animation: rotation infinite linear 20s;
+	-webkit-animation: rotation infinite linear 20s;
+}
+
+section .town .night {
+	position: absolute;
+	bottom: 0;
+	left: 40px;
+}
+
+section .town .day {
+	position: absolute;
+	bottom: 0;
+	left: 40px;
+	animation: day linear infinite 20s;
+	-webkit-animation: day linear infinite 20s;
+}
+section .people {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	animation: day linear infinite 20s;
+	-webkit-animation: day linear infinite 20s;
+}
+
+section .people .man, section .people .family {
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	animation: flow infinite linear 20s;
+	-webkit-animation: flow infinite linear 20s;
+}
+
+section .people .man {
+	animation: flow infinite linear 7s;
+	-webkit-animation: flow infinite linear 7s;
+}
 
 
+@keyframes rotation {
+	0% {
+		transform: rotate(0deg)	;
+		-webkit-transform: rotate(0deg)	;
+		-moz-transform: rotate(0deg)	;
+		-ms-transform: rotate(0deg)	;
+		-o-transform: rotate(0deg)	;
+	}
+	100% {
+		transform: rotate(360deg)	;
+		-webkit-transform: rotate(360deg)	;
+		-moz-transform: rotate(360deg)	;
+		-ms-transform: rotate(360deg)	;
+		-o-transform: rotate(360deg)	;
+	}
+}
+
+@keyframes sky {
+	0% {
+		background: #b08fcc;
+	}
+	25% {
+		background: #b1e1e2;
+	}
+	50% {
+		background: #fcd2e2;
+	}
+	75% {
+		background: #636888;
+	}
+	100% {
+		background: #b08fcc;
+	}
+}
+
+@keyframes sun {
+	0% {
+		opacity: 0;
+		transform: rotate(-90deg)	;
+		-webkit-transform: rotate(-90deg)	;
+		-moz-transform: rotate(-90deg)	;
+		-ms-transform: rotate(-90deg)	;
+		-o-transform: rotate(-90deg)	;
+	}
+	25% {
+		opacity: 1;
+		transform: rotate(-30deg)	;
+		-webkit-transform: rotate(-30deg)	;
+		-moz-transform: rotate(-30deg)	;
+		-ms-transform: rotate(-30deg)	;
+		-o-transform: rotate(-30deg)	;
+	}
+	50% {
+		opacity: 1;
+		transform: rotate(30deg)	;
+		-webkit-transform: rotate(30deg)	;
+		-moz-transform: rotate(30deg)	;
+		-ms-transform: rotate(30deg)	;
+		-o-transform: rotate(30deg)	;
+	}
+	75% {
+		opacity: 0;
+		transform: rotate(90deg)	;
+		-webkit-transform: rotate(90deg)	;
+		-moz-transform: rotate(90deg)	;
+		-ms-transform: rotate(90deg)	;
+		-o-transform: rotate(90deg)	;
+	}
+	100% {
+		opacity: 0;
+		transform: rotate(-90deg)	;
+		-webkit-transform: rotate(-90deg)	;
+		-moz-transform: rotate(-90deg)	;
+		-ms-transform: rotate(-90deg)	;
+		-o-transform: rotate(-90deg)	;
+	}
+}
+
+@keyframes day {
+	0% {
+		opacity: 0;
+	}
+	25% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 1;
+	}
+	75% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+
+@keyframes flow {
+	0% {
+		left: 0;
+		opacity: 0;
+	}
+	10% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 1;
+	}
+	100% {
+		left: 90%;
+		opacity: 0;
+	}
+}
