--- a/template/10-template/css/style.css
+++ b/template/10-template/css/style.css
@@ -1,17 +1,608 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
 
-* { 
-    margin: 0;  
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-ol,ul {
-    list-style: none;
+
+ol,
+ul {
+  list-style: none;
 }
-a { 
-    outline: 0; 
-    text-decoration: none; 
+
+a {
+  outline: 0;
+  text-decoration: none;
 }
+
 img {
-    border: 0;
+  border: 0;
+}
+
+body {
+  font: 17px/1.4 "orbitron";
+  letter-spacing: 1px;
+  color: #ddd;
+  background: #000;
+}
+
+.wrap {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  /* 원근감 */
+  perspective: 1300px;
+}
+
+.wrap > video {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.5;
+}
+
+.circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 600px;
+  height: 800px;
+  margin-top: -400px;
+  margin-left: -300px;
+  transform-style: preserve-3d;
+  animation: ani linear 30s infinite;
+  -webkit-animation: ani linear 30s infinite;
+}
+
+.circle article {
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*display: none;
+  */width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
+.circle article h1 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 30px;
+  opacity: 0;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.circle article:hover h1 {
+  top: -60px;
+  opacity: 1;
+}
+
+.circle article .inner {
+  width: 100%;
+  height: 100%;
+}
+
+.circle article .inner > div {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  box-sizing: border-box;
+  background: rgba(255, 255, 255, 0.06);
+  padding: 50px;
+  opacity: 0.7;
+  overflow: hidden;
+  cursor: pointer;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+}
+
+.circle article .inner > div:hover {
+  background: rgba(255, 255, 255, 0.15);
+  transform: scale(1.03);
+  -webkit-transform: scale(1.03);
+  -moz-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  -o-transform: scale(1.03);
+  opacity: 1;
+}
+
+/* .circle .face1 {
+  display: block;
+} */
+
+.circle .face1 .inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.circle .face1 .inner > div {
+  width: 290px;
+  height: 254px;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.circle .face1 .inner > div h2 {
+  margin-top: 20px;
+  letter-spacing: 2px;
+  transition: all .5s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+}
+
+.circle .face1 .inner > div p i {
+  font-size: 100px;
+  transition: all .5s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+  opacity: 0.7;
+}
+
+.circle article .inner > div:hover i {
+  color: lightcyan;
+  text-shadow: 0 0 10px aqua;
+  transform: scale(1.2) ;
+  -webkit-transform: scale(1.2) ;
+  -moz-transform: scale(1.2) ;
+  -ms-transform: scale(1.2) ;
+  -o-transform: scale(1.2) ;
+  transition: all .5s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+}
+
+.circle article .inner > div:hover h2 {
+  color: lightcyan;
+  text-shadow: 0 0 10px aqua;
+}
+
+/* .circle .face2 {
+  display: block;
+} */
+
+.circle .face2 .inner > div img {
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 40px;;
+}
+
+.circle .face2 .inner > div h3 {
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.circle .face2 .inner > div p {
+  font: 18px/1.3 "arial";
+  color: #ccc;
+}
+/* 
+.circle .face3 {
+  display: block;
+} */
+
+.circle .face3 .inner > div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 253px;
+  margin-bottom: 20px;
+}
+
+.circle .face3 .inner > div .picture {
+  position: relative;
+  top: 15px;
+  width: 120px;
+  height: 120px;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+  overflow: hidden;
+  border-radius: 60px;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  -ms-border-radius: 60px;
+  -o-border-radius: 60px;
+  border: 1px solid #fff;
+}
+
+.circle .face3 .inner > div:nth-of-type(1) .picture {
+  background-image: url("../img/member1.jpg");
+}
+
+.circle .face3 .inner > div:nth-of-type(2) .picture {
+  background-image: url("../img/member2.jpg");
+}
+
+.circle .face3 .inner > div:nth-of-type(3) .picture {
+  background-image: url("../img/member3.jpg");
+}
+
+.circle .face3 .inner > div .con {
+  width: 340px;
+}
+
+.circle .face3 .inner > div .con h2 {
+  color: #fff;
+}
+
+.circle .face3 .inner > div .con p {
+  font: 18px/1.3 "arial";
+  color: #ddd;
+  margin-top: 20px;
+}
+
+.circle .face3 .inner > div .con span {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
+  font: 12px/1 "obitron";
+  color: aqua;
+  opacity: 0.5;
+}
+
+/* .circle .face4 {
+  display: block;
+} */
+
+.circle .face4 .inner > div p {
+  font: 16px/1.3 "arial";
+  color: #bbb;
+  margin-top: 20px;
+}
+
+.circle .face4 .inner > div:nth-of-type(1) {
+  width: 100%;
+  height: 600px;
+  margin-bottom: 20px;
+}
+
+.circle .face4 .inner > div:nth-of-type(1) video {
+  width: 100%;
+  border: 1px solid #fff;
+  margin-bottom: 20px;
+}
+
+.circle .face4 .inner > div:nth-of-type(2) {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 180px;
+}
+
+.circle .face4 .inner > div:nth-of-type(2) em {
+  font-size: 12px;
+  color: #ccc;
+  margin-top: 23px;
+}
+
+/* .circle .face5 {
+  display: block;
+} */
+
+.circle .face5 .inner div img {
+  margin-bottom: 40px;
+}
+
+.circle .face5 .inner div .pic {
+  width: 100%;
+  height: 250px;
+  border: 1px solid #bbb;
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, 0.3) url("../img/robot.png") no-repeat center center / cover;
+  margin-bottom: 50px;
+}
+
+.circle .face5 .inner div .reflection {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  transition: all .5s;
+  -webkit-transition: all .5s;
+  -moz-transition: all .5s;
+  -ms-transition: all .5s;
+  -o-transition: all .5s;
+}
+
+.circle .face5:hover .inner div .reflection {
+  top: -40%;
+}
+
+/* .circle .face6 {
+  display: block;
+} */
+
+.circle .face6 .inner > div {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 185px;
+  margin-bottom: 20px;
+}
+
+.circle .face6 .inner > div i {
+  position: relative;
+  width: 22%;
+  height: 100%;
+  border-right: 1px solid #bbb;
+  font-size: 50px;
+  color: #fff;
+  text-align: left;
+  line-height: 90px;
+  box-sizing: border-box;
+  padding-left: 15px;
+}
+
+.circle .face6 .inner > div .con {
+  width: 75%;
+  height: 100%;
+  box-sizing: border-box;
+  padding-left: 40px;
+}
+
+.circle .face6 .inner > div .con p {
+  font: 18px/1 "arial";
+  color: #999;
+}
+
+/* .circle .face7 {
+  display: block;
+} */
+
+.circle .face7 .inner > div > div {
+  position: relative;
+  width: 100%;
+  height: 100%;;
+  overflow: hidden;
+  border: 1px solid #aaa;
+  box-sizing: border-box;
+}
+
+.circle .face7 .inner > div > div video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.9;
+}
+
+.circle .face7 .inner > div > div h2 {
+  position: absolute;
+  top: 140px;
+  left: 50px;
+  font-size: 40px;
+  color: #fff;
+  text-align: left;
+  line-height: 1.1;
+  text-shadow: 2px 2px 5px #555;
+  z-index: 2;
+}
+
+.circle .face7 .inner > div > div img:nth-of-type(1) {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.circle .face7 .inner > div > div img:nth-of-type(2) {
+  position: absolute;
+  bottom: 85px;
+  right: -18px;
+  width: 90%;
+}
+
+/* .circle .face8 {
+  display: block;
+} */
+
+.circle .face8 .inner {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.circle .face8 .inner > div:nth-of-type(1) {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 20px;
+}
+
+.circle .face8 .inner > div:nth-of-type(1) i {
+  position: absolute;
+  bottom: 60px;
+  left: 50px;
+  font-size: 200px;
+  opacity: 0.9;
+}
+
+.circle .face8 .inner > div:nth-of-type(1) span {
+  position: absolute;
+  bottom: 60px;
+  right: 60px;
+  font-weight: bold;
+  font-size: 120px;
+}
+
+.circle .face8 .inner > div:nth-of-type(1) span em {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  font: bold normal 60px/1 "arial";
+}
+
+.circle .face8 .inner > div:nth-of-type(2) {
+  width: 290px;
+  height: 380px;
+  margin-right: 20px;
+  text-align: center;
+}
+
+.circle .face8 .inner > div:nth-of-type(2) i {
+  font-size: 120px;
+  color: #fff;
+  opacity: 0.8;
+}
+
+.circle .face8 .inner > div:nth-of-type(2) h3 {
+  margin-top: 30px;
+  margin-bottom: 14px;
+  font: bold 20px/1 "obitron";
+}
+
+.circle .face8 .inner > div:nth-of-type(2) p {
+  font: 16px/1 "arial";
+  color: #ccc;
+}
+
+.circle .face8 .inner > div:nth-of-type(2) h4 {
+  position: relative;
+  font-size: 20px;
+  margin-top: 20px;
+  letter-spacing: 3px;
+}
+
+.circle .face8 .inner > div:nth-of-type(2) h4 b {
+  position: absolute;
+  top: 0;
+  right: 40px;
+  font: bold 24px/ "arial";
+  color: #ccc;
+}
+
+
+.circle .face8 .inner > div:nth-of-type(3) {
+  width: 290px;
+  height: 380px;
+  text-align: center;
+}
+
+.circle .face8 .inner > div:nth-of-type(3) i {
+  font-size: 120px;
+  color: #fff;
+  opacity: 0.8;
+}
+
+.circle .face8 .inner > div:nth-of-type(3) h3 {
+  font: 20px/1 "orbitron";
+  margin-top: 30px;
+  margin-bottom: 14px;
+}
+
+.circle .face8 .inner > div:nth-of-type(3) p {
+  font: 16px/1 "arial";
+  color: #ccc;
+}
+
+.circle .face8 .inner > div:nth-of-type(3) h4 {
+  position: relative;
+  margin-top: 20px;
+  font-size: 40px;
+  letter-spacing: 3px;
+}
+
+.circle .face8 .inner > div:nth-of-type(3) h4 b {
+  position: absolute;
+  top: 0;
+  right: 40px;
+  font: bold 24px/1 "arial";
+  color: #ddd;
+}
+
+.circle .face1 {
+  transform: rotateY(0deg) translateZ(-764px);
+  -webkit-transform: rotateY(0deg) translateZ(-764px);
+  -moz-transform: rotateY(0deg) translateZ(-764px);
+  -ms-transform: rotateY(0deg) translateZ(-764px);
+  -o-transform: rotateY(0deg) translateZ(-764px);
+}
+
+.circle .face2 {
+  transform: rotateY(45deg) translateZ(-764px);
+  -webkit-transform: rotateY(45deg) translateZ(-764px);
+  -moz-transform: rotateY(45deg) translateZ(-764px);
+  -ms-transform: rotateY(45deg) translateZ(-764px);
+  -o-transform: rotateY(45deg) translateZ(-764px);
+}
+
+.circle .face3 {
+  transform: rotateY(90deg) translateZ(-764px);
+  -webkit-transform: rotateY(90deg) translateZ(-764px);
+  -moz-transform: rotateY(90deg) translateZ(-764px);
+  -ms-transform: rotateY(90deg) translateZ(-764px);
+  -o-transform: rotateY(90deg) translateZ(-764px);
+}
+
+.circle .face4 {
+  transform: rotateY(135deg) translateZ(-764px);
+  -webkit-transform: rotateY(135deg) translateZ(-764px);
+  -moz-transform: rotateY(135deg) translateZ(-764px);
+  -ms-transform: rotateY(135deg) translateZ(-764px);
+  -o-transform: rotateY(135deg) translateZ(-764px);
+}
+
+.circle .face5 {
+  transform: rotateY(180deg) translateZ(-764px);
+  -webkit-transform: rotateY(180deg) translateZ(-764px);
+  -moz-transform: rotateY(180deg) translateZ(-764px);
+  -ms-transform: rotateY(180deg) translateZ(-764px);
+  -o-transform: rotateY(180deg) translateZ(-764px);
+}
+
+.circle .face6 {
+  transform: rotateY(225deg) translateZ(-764px);
+  -webkit-transform: rotateY(225deg) translateZ(-764px);
+  -moz-transform: rotateY(225deg) translateZ(-764px);
+  -ms-transform: rotateY(225deg) translateZ(-764px);
+  -o-transform: rotateY(225deg) translateZ(-764px);
+}
+
+.circle .face7 {
+  transform: rotateY(270deg) translateZ(-764px);
+  -webkit-transform: rotateY(270deg) translateZ(-764px);
+  -moz-transform: rotateY(270deg) translateZ(-764px);
+  -ms-transform: rotateY(270deg) translateZ(-764px);
+  -o-transform: rotateY(270deg) translateZ(-764px);
+}
+
+.circle .face8 {
+  transform: rotateY(315deg) translateZ(-764px);
+  -webkit-transform: rotateY(315deg) translateZ(-764px);
+  -moz-transform: rotateY(315deg) translateZ(-764px);
+  -ms-transform: rotateY(315deg) translateZ(-764px);
+  -o-transform: rotateY(315deg) translateZ(-764px);
+}
+
+
+@keyframes ani {
+  0% {
+    transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(360deg);
+    -webkit-transform: rotateY(360deg);
+    -moz-transform: rotateY(360deg);
+    -ms-transform: rotateY(360deg);
+    -o-transform: rotateY(360deg);
+  }
 }
