--- a/template/10-template/index.html
+++ b/template/10-template/index.html
@@ -13,6 +13,187 @@
 	<script defer src="js/main.js"></script>
 </head>
 <body>
-	
+	<main class="wrap">
+		<video src="img/bg.mp4" autoplay loop muted></video>
+		<section class="circle">
+			<article class="face1">
+				<h1>Co Company</h1>
+				<div class="inner">
+					<div>
+						<p><i class="fab fa-android"></i></p>
+						<h2>Android</h2>
+					</div>
+					<div>
+						<p><i class="fab fa-apple"></i></p>
+						<h2>Apple</h2>
+					</div>
+					<div>
+						<p><i class="fab fa-twitter-square"></i></p>
+						<h2>Twitter</h2>
+					</div>
+					<div>
+						<p><i class="fab fa-facebook-square"></i></p>
+						<h2>Facebook</h2>
+					</div>
+					<div>
+						<p><i class="fab fa-youtube"></i></p>
+						<h2>Youtube</h2>
+					</div>
+					<div>
+						<p><i class="fab fa-google-play"></i></p>
+						<h2>Google</h2>
+					</div>
+				</div>
+			</article>
+
+			<article class="face2">
+				<h1>What's New</h1>
+				<div class="inner">
+					<div>
+						<h2>News n Articles</h2>
+						<img src="img/pattern.jpg" />
+						<h3>What is Lorem Ipsum</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/><br/>
+							Excepturi doloremque tempora beatae quis voluptatem eaque vero laborum, quia soluta rerum perferendis ratione illum officiis maxime eveniet delectus repellendus aut placeat?</p>
+					</div>
+				</div>
+			</article>
+
+			<article class="face3">
+				<h1>Members</h1>
+				<div class="inner">
+					<div>
+						<div class="picture"></div>
+						<div class="con">
+							<h2>Member Infomation1</h2>
+							<p>Here comes Member Infomation contents in detail. Here comes Member Infomation contents in detail.</p>
+							<span>2022-01-01</span>
+						</div>
+					</div>
+					<div>
+						<div class="picture"></div>
+						<div class="con">
+							<h2>Member Infomation2</h2>
+							<p>Here comes Member Infomation contents in detail. Here comes Member Infomation contents in detail.</p>
+							<span>2022-01-02</span>
+						</div>
+					</div>
+					<div>
+						<div class="picture"></div>
+						<div class="con">
+							<h2>Member Infomation3</h2>
+							<p>Here comes Member Infomation contents in detail. Here comes Member Infomation contents in detail.</p>
+							<span>2022-01-03</span>
+						</div>
+					</div>
+				</div>
+			</article>
+
+			<article class="face4">
+				<h1>Advertisement</h1>
+				<div class="inner">
+					<div>
+						<video src="img/intro.mp4" autoplay loop controls></video>
+						<h2>Promotion</h2>
+						<p>Here comes Promotion contents in detail. Here comes Promotion contents in detail. Here comes Promotion contents in detail.<br/><br/>
+							Here comes Promotion contents in detail.Here comes Promotion contents in detail.</p>
+					</div>
+					<div>
+						</h2>Infomation<h2>
+						<p>Here comes Promotion contents in detail.</p>
+						<em>2022.01.03</em>
+					</div>
+				</div>
+			</article>
+
+			<article class="face5">
+				<h1>DCODELAB</h1>
+				<div class="inner">
+					<div>
+						<img src="img/tit.png">
+						<div class="pic"></div>
+						<img src="img/txt.png">
+						<img src="img/btn.png">
+						<img class="reflection" src="img/reflect.png">
+					</div>
+				</div>
+			</article>
+
+			<article class="face6">
+				<h1>Services</h1>
+				<div class="inner">
+					<div>
+						<i class="fas fa-rss"></i>
+						<div class="con">
+							<h2>Network Services</h2>
+							<p>Here comes the contents for Network<br/>
+							Show this in Detail.</p>
+						</div>
+					</div>
+					<div>
+						<i class="fas fa-code"></i>
+						<div class="con">
+							<h2>Technical Support</h2>
+							<p>Here comes the contents for Technical Support<br/>
+							Show this in Detail.</p>
+						</div>
+					</div>
+					<div>
+						<i class="fas fa-envelope"></i>
+						<div class="con">
+							<h2>Customer Services</h2>
+							<p>Here comes the contents for Customer Servicaes<br/>
+							Show this in Detail.</p>
+						</div>
+					</div>
+					<div>
+						<i class="fas fa-list"></i>
+						<div class="con">
+							<h2>Contact Lists</h2>
+							<p>Here comes the contents for Contact<br/>
+							Show this in Detail.</p>
+						</div>
+					</div>
+				</div>
+			</article>
+
+			<article class="face7">
+				<h1>Promotion</h1>
+				<div class="inner">
+					<div>
+						<div>
+							<video src="img/loop.mp4" autoplay loop muted></video>
+							<h2>Promote<br/> Your<br/> Company</h2>
+							<img src="img/txt2.png">
+							<img src="img/line.png">
+						</div>
+					</div>
+				</div>
+			</article>
+
+			<article class="face8">
+				<h1>Temporature</h1>
+				<div class="inner">
+					<div>
+						<h2>Weather</h2>
+						<i class="fab fa-mixcloud"></i>
+						<span>26<em>o</em></span>
+					</div>
+					<div>
+						<i class="fas fa-sun"></i>
+						<h3>Sunny</h3>
+						<p>Afternoon temperature</p>
+						<h4>23<b>o</b></h4>
+					</div>
+					<div>
+						<i class="fas fa-bolt"></i>
+						<h3>Lightning</h3>
+						<p>Night temperature</p>
+						<h4>18<b>o</b></h4>
+					</div>
+				</div>
+			</article>
+		</section>
+	</main>
 </body>
 </html>
