--- a/template/11-template/css/style.css
+++ b/template/11-template/css/style.css
@@ -16,3 +16,270 @@ a {
 	text-decoration: none;
 	outline: 0;
 }
+
+main {
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	background: #333;
+}
+
+main header {
+	position: relative;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-content: space-between;
+	z-index: 3;
+	width: 20%;
+	height: 100%;
+	padding: 10vh 5vw;
+}
+
+main header h1 {
+	font-size: 0;
+	color: #fff;
+}
+
+main header h1 i {
+	font-size: 5vw;
+	margin-bottom: 15px;
+}
+
+main header h1 span {
+	font: normal 0.8vw/1 "arial";
+}
+
+main header address {
+	font: normal 11px/1.2 "arial";
+	color: #888;
+}
+
+main nav {
+	position: absolute;
+	z-index: 3;
+	top: 10vh;
+	right: 5vw;
+}
+
+main nav ul {
+	display: flex;
+}
+
+main nav ul li a {
+	font-size: 18px;
+	color: #bbb;
+	margin-right: 30px;
+}
+
+main section {
+	position: relative;
+	z-index: 1;
+	display: flex;
+	width: 80%;
+	height: 100%;
+	padding-top: 140px;
+}
+
+main section article {
+	position: relative;
+	z-index: 1;
+	/*모든아티클요소의너비를동등하게*/
+	flex: 1;
+	padding: 70px 40px 100px;
+	opacity: 0.6;
+	transition: flex 1s, opacity 1s;
+	-webkit-transition: flex 1s, opacity 1s;
+	-moz-transition: flex 1s, opacity 1s;
+	-ms-transition: flex 1s, opacity 1s;
+	-o-transition: flex 1s, opacity 1s;
+	cursor: pointer;
+}
+
+main section article:before {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: -200px;
+	display: block;
+	width: 80%;
+	height: 95%;
+	background: #444;
+	opacity: 0;
+	transition: 1s;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-ms-transition: 1s;
+	-o-transition: 1s;
+}
+
+main section article .inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	align-content: space-between;
+}
+
+main section article .inner .txt {
+	width: 100%;
+	transition: 0.5s;
+	-webkit-transition: 0.5s;
+	-moz-transition: 0.5s;
+	-ms-transition: 0.5s;
+	-o-transition: 0.5s;
+}
+
+main section article .inner .txt h2 {
+	font: normal 2vw/1 "Alegreya Sans SC";
+	color: #fff;
+	margin-bottom: 40px;
+	padding-top: 70px;
+	transition: 1s;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-ms-transition: 1s;
+	-o-transition: 1s;
+}
+
+main section article .inner .txt h2:after {
+	content: '';
+	display: block;
+	width: 40px;
+	height: 2px;
+	background: #777;
+	margin-top: 20px;
+	transition: 1.5s;
+	-webkit-transition: 1.5s;
+	-moz-transition: 1.5s;
+	-ms-transition: 1.5s;
+	-o-transition: 1.5s;
+}
+
+main section article .inner .txt p {
+	font: 14px/1.4 "arial";
+	color: #999;
+}
+
+main section article .inner figure {
+	position: relative;
+	width: 100%;
+	height: 15vh;
+	background: #777;
+	transform-origin: left center;
+	box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
+	overflow: hidden;
+	filter: saturate(10%);
+	-webkit-filter: saturate(10%);
+	transition: 1s;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-ms-transition: 1s;
+	-o-transition: 1s;
+}
+
+main section article .inner figure video {
+	width:  100%;
+	height: 100%;
+	object-fit: cover;
+	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+}
+
+main section article:hover {
+	z-index: 2;
+	flex: 1.5;
+	opacity: 1;
+}
+
+main section article:hover:before {
+	left: 0;
+	opacity: 1;
+}
+
+main section article:hover .inner .txt {
+	width: 75%;
+}
+
+main section article:hover .inner .txt h2 {
+	font-size: 5vw;
+	padding-top: 0;
+}
+
+main section article:hover .inner .txt h2:after {
+	width: 120px;
+	background: orange;
+}
+
+main section article:hover .inner figure {
+	height: 25vh;
+	filter: saturate(120%);
+	-webkit-filter: saturate(120%);
+	transform: translateY(3vh);
+	-webkit-transform: translateY(3vh);
+	-moz-transform: translateY(3vh);
+	-ms-transform: translateY(3vh);
+	-o-transform: translateY(3vh);
+}
+
+main aside {
+	z-index: 2;
+	position: absolute;
+	top: 0;
+	left: -100%;
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	height: 100vh;
+	background: #222;
+	opacity: 0;
+	box-sizing: border-box;
+	padding: 20vh 7vw 14vh 20vw;
+	transition: 1s;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	-ms-transition: 1s;
+	-o-transition: 1s;
+}
+
+main aside.on {
+	opacity: 1;
+	left: 0;
+}
+
+main aside .txt {
+	width: 25%;
+	height: 100%;
+}
+
+main aside .txt h1 {
+	font: normal 6vw/1 "Alegreya Sans SC";
+	color: #ddd;
+	margin-bottom: 20px;
+}
+
+main aside .txt p {
+	font: 1.1vw/1.3 "arial";
+	color: #666;
+	margin-bottom: 60px;
+}
+
+main aside .txt span {
+	cursor: pointer;
+	color: orange;
+}
+
+main aside figure {
+	width: 72%;
+	height: 100%;
+}
+
+main aside figure video {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
