--- a/template/12-template/css/style.css
+++ b/template/12-template/css/style.css
@@ -13,3 +13,482 @@ a {
 	text-decoration: none;
 	outline: 0;
 }
+
+figure {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	background: linear-gradient(25deg, violet, pink);
+}
+
+figure h1 {
+	position: absolute;
+	top: 7vh;
+	left: 4vw;
+	font-size: 0;
+}
+
+figure h1 strong {
+	font-size: 36px;
+	font-family: 'arial';
+	color: #fff;
+	line-height: 1.4;
+	letter-spacing: 1px;
+}
+
+figure h1 span {
+	font-size: 12px;
+	font-family: 'arial';
+	color: #fff;
+	opacity: 0.8;
+	line-height: 1;
+	letter-spacing: 1;
+}
+
+figure .menu {
+	position: absolute;
+	top: 8vh;
+	right: 4vw;
+	font-size: 24px;
+	color: #fff;
+}
+
+figure > p {
+	position: absolute;
+	bottom: 7vh;
+	left: 50%;
+	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	-moz-transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-o-transform: translateX(-50%);
+	font: 12px/1 'arial';
+	color: #fff;
+	letter-spacing: 2px;
+	opacity: 0.8;
+}
+
+figure section {
+	position: absolute;
+	top: 140%;
+	left: 50%;
+	width: 20vw;
+	height: 65vh;
+	margin-top: -25vh;
+	margin-left: -10vw;
+}
+
+figure section article {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+figure section article .inner {
+	display: flex;
+	justify-content: center;
+	align-content: space-between;
+	flex-wrap: wrap;
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+	background: #f0f7ff;
+	padding: 5vh 2.5vw 8vh;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+	box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.1);
+	opacity: 0.6;
+	transform: scale(0.8);
+	-webkit-transform: scale(0.8);
+	-moz-transform: scale(0.8);
+	-ms-transform: scale(0.8);
+	-o-transform: scale(0.8);
+	transition: opacity 1s, transform 1s;
+	-webkit-transition: opacity 1s, transform 1s;
+	-moz-transition: opacity 1s, transform 1s;
+	-ms-transition: opacity 1s, transform 1s;
+	-o-transition: opacity 1s, transform 1s;
+}
+
+figure section article.on .inner {
+	opacity: 0.9;
+	transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	-o-transform: scale(1.1);
+}
+
+figure section article .inner .pic {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 15vw;
+	height: 15vw;
+	margin: 0 auto;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+	background-repeat: no-repeat;
+	background-position: 200%;
+}
+
+figure section article .inner .pic:before,
+figure section article .inner .pic:after {
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: inherit;
+	height: inherit;
+	border-radius: inherit;
+	-webkit-border-radius: inherit;
+	-moz-border-radius: inherit;
+	-ms-border-radius: inherit;
+	-o-border-radius: inherit;
+	background-image: inherit;
+	background-position: center;
+	background-repeat: inherit;
+	background-size: cover;
+	transform-origin: center center;
+}
+
+figure section article .inner .pic::before {
+	transform: translateY(10%);
+	-webkit-transform: translateY(10%);
+	-moz-transform: translateY(10%);
+	-ms-transform: translateY(10%);
+	-o-transform: translateY(10%);
+	filter: blur(20px) brightness(1.6);
+	-webkit-filter: blur(20px) brightness(1.6);
+}
+
+figure section article .inner .pic .dot {
+	z-index: 3;
+	position: relative;
+	width: 3vw;
+	height: 3vw;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+	background: #e4f1ff;
+	box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+figure section article .inner .txt {
+	z-index: 3;
+	position: relative;
+	text-align: center;
+}
+
+figure section article .inner .txt h2 {
+	font-size: 20px;
+	font-family: 'arial';
+	color: #222;
+	margin-bottom: 2vh;
+}
+
+figure section article .inner .txt p {
+	font-size: 12px;
+	margin-bottom: 3vh;
+	color: #777;
+}
+
+figure section article .inner .txt ul {
+	display: flex;
+	justify-content: space-around;
+}
+
+figure section article .inner .txt ul li {
+	cursor: pointer;
+	opacity: 0.6;
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure section article .inner .txt ul li.play {
+	transform: scale(1.5);
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-ms-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	opacity: 0.9;
+}
+
+figure section article .inner .txt ul li:hover {
+	transform: scale(1.5);
+	-webkit-transform: scale(1.5);
+	-moz-transform: scale(1.5);
+	-ms-transform: scale(1.5);
+	-o-transform: scale(1.5);
+	opacity: 0.8;
+}
+
+figure section article .inner .txt ul li.play:hover {
+	transform: scale(2);
+	-webkit-transform: scale(2);
+	-moz-transform: scale(2);
+	-ms-transform: scale(2);
+	-o-transform: scale(2);
+	opacity: 1;
+}
+
+
+@keyframes ani {
+	0% {
+		transform: rotate(0);
+		-webkit-transform: rotate(0);
+		-moz-transform: rotate(0);
+		-ms-transform: rotate(0);
+		-o-transform: rotate(0);
+}
+	100% {
+		transform: rotate(360deg);
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
+}
+}
+
+@keyframes ani2 {
+	0% {
+		transform: translateY(10%) rotate(0deg);
+		-webkit-transform: translateY(10%) rotate(0deg);
+		-moz-transform: translateY(10%) rotate(0deg);
+		-ms-transform: translateY(10%) rotate(0deg);
+		-o-transform: translateY(10%) rotate(0deg);
+	}
+	100% {
+		transform: translateY(10%) rotate(360deg);
+		-webkit-transform: translateY(10%) rotate(360deg);
+		-moz-transform: translateY(10%) rotate(360deg);
+		-ms-transform: translateY(10%) rotate(360deg);
+		-o-transform: translateY(10%) rotate(360deg);
+	}
+}
+
+figure section article .inner .pic.on:after {
+	animation: ani 4s linear infinite;
+	-webkit-animation: ani 4s linear infinite;
+}
+
+figure section article .inner .pic.on:before {
+	animation: ani2 4s linear infinite;
+	-webkit-animation: ani2 4s linear infinite;
+}
+
+figure .buttonPrev {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	display: flex;
+	align-items: center;
+	width: 60px;
+	height: 60px;
+	transform: translate(-20vw, -50%);
+	-webkit-transform: translate(-20vw, -50%);
+	-moz-transform: translate(-20vw, -50%);
+	-ms-transform: translate(-20vw, -50%);
+	-o-transform: translate(-20vw, -50%);
+	text-align: left;
+	cursor: pointer;
+}
+
+figure .buttonPrev span {
+	font: 11px/1 'arial';
+	color: #fff;
+	opacity: 1;
+	transform: translateX(30%);
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure .buttonPrev::before {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	content: '';
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	transform-origin: left center;
+	transform: rotate(-180deg);
+	-webkit-transform: rotate(-180deg);
+	-moz-transform: rotate(-180deg);
+	-ms-transform: rotate(-180deg);
+	-o-transform: rotate(-180deg);
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure .buttonPrev:after {
+	position: absolute;
+	bottom: 50%;
+	left: 0;
+	content: '';
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	transform-origin: left center;
+	transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure .buttonPrev:hover span {
+	opacity: 0;
+	transform: translateX(100%);
+	-webkit-transform: translateX(100%);
+	-moz-transform: translateX(100%);
+	-ms-transform: translateX(100%);
+	-o-transform: translateX(100%);
+}
+
+figure .buttonPrev:hover::before {
+	transform: rotate(-30deg);
+	-webkit-transform: rotate(-30deg);
+	-moz-transform: rotate(-30deg);
+	-ms-transform: rotate(-30deg);
+	-o-transform: rotate(-30deg);
+}
+
+figure .buttonPrev:hover:after {
+	transform: rotate(30deg);
+	-webkit-transform: rotate(30deg);
+	-moz-transform: rotate(30deg);
+	-ms-transform: rotate(30deg);
+	-o-transform: rotate(30deg);
+}
+
+figure .buttonNext {
+	position: absolute;
+	top: 50%;
+	right: 50%;
+	display: flex;
+	align-items: center;
+	width: 60px;
+	height: 60px;
+	text-align: right;
+	cursor: pointer;
+	transform: translate(20vw, -50%);
+	-webkit-transform: translate(20vw, -50%);
+	-moz-transform: translate(20vw, -50%);
+	-ms-transform: translate(20vw, -50%);
+	-o-transform: translate(20vw, -50%);
+}
+
+figure .buttonNext span {
+	font: 11px/1 'arial';
+	color: #fff;
+	opacity: 1;
+	transform: translateX(-30%);
+	-webkit-transform: translateX(-30%);
+	-moz-transform: translateX(-30%);
+	-ms-transform: translateX(-30%);
+	-o-transform: translateX(-30%);
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure .buttonNext:before {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	content: '';
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	transform-origin: right center;
+	transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure .buttonNext:after {
+	position: absolute;
+	bottom: 50%;
+	left: 0;
+	content: '';
+	display: block;
+	width: 100%;
+	height: 1px;
+	background: #fff;
+	transform-origin: right center;
+	transform: rotate(-180deg);
+	-webkit-transform: rotate(-180deg);
+	-moz-transform: rotate(-180deg);
+	-ms-transform: rotate(-180deg);
+	-o-transform: rotate(-180deg);
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
+}
+
+figure .buttonNext:hover span {
+	opacity: 0;
+	transform: translateX(-100%);
+	-webkit-transform: translateX(-100%);
+	-moz-transform: translateX(-100%);
+	-ms-transform: translateX(-100%);
+	-o-transform: translateX(-100%);
+}
+
+figure .buttonNext:hover::before {
+	transform: rotate(30deg);
+	-webkit-transform: rotate(30deg);
+	-moz-transform: rotate(30deg);
+	-ms-transform: rotate(30deg);
+	-o-transform: rotate(30deg);
+}
+
+figure .buttonNext:hover::after {
+	transform: rotate(-30deg);
+	-webkit-transform: rotate(-30deg);
+	-moz-transform: rotate(-30deg);
+	-ms-transform: rotate(-30deg);
+	-o-transform: rotate(-30deg);
+}
