trmplate7 색상코드 변경 / template13 completed

--- a/template/07-template/css/style.css
+++ b/template/07-template/css/style.css
@@ -185,7 +185,7 @@ body {
 }
 
 .member2 .image_profile {
-	box-shadow: 5px 15px 30px #bdccb7;
+	box-shadow: 5px 15px 30px #bdccb783;
 }
 
 .member2 .button_view {
