--- a/template/13-template/css/style.css
+++ b/template/13-template/css/style.css
@@ -14,3 +14,285 @@ li {
 a {
 	text-decoration: none;
 }
+
+body {
+	background: #efefef;
+}
+
+body>text {
+	display: none;
+}
+
+header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 400px;
+	height: 100%;
+	background: linear-gradient(45deg, aqua, royalblue);
+}
+
+header h1 {
+	position: absolute;
+	top: 50%;
+	left: 50px;
+	transform: translateY(-15%);
+	-webkit-transform: translateY(-15%);
+	-moz-transform: translateY(-15%);
+	-ms-transform: translateY(-15%);
+	-o-transform: translateY(-15%);
+	font:bold 50px/1 'orbitron';
+	color: #fff;
+	letter-spacing: 1px;
+}
+
+header h1::before {
+	content: 'UI/UX DEVELOPMENT';
+	position: absolute;
+	top: 140px;
+	left: 0;
+	display: block;
+	font: 14px/1 'orbitron';
+	letter-spacing: 2px;
+	color: #fff;
+	opacity: 0.8;
+}
+
+header h1::after {
+	content: '';
+	display: block;
+	width: 150px;
+	height: 2px;
+	background: #fff;
+	margin-top: 20px;
+}
+
+header ul {
+	position: absolute;
+	bottom: 100px;
+	left: 40px;
+}
+
+header ul li {
+	float: left;
+	margin-right: 10px;
+}
+
+header ul li a {
+	font-size: 20px;
+	color: #fff;
+}
+
+header ul li a span {
+	display: inline-block;
+	font-weight: bold;
+	opacity: 0.7;
+	transform: scale(0.7) translateX(-10px);
+	-webkit-transform: scale(0.7) translateX(-10px);
+	-moz-transform: scale(0.7) translateX(-10px);
+	-ms-transform: scale(0.7) translateX(-10px);
+	-o-transform: scale(0.7) translateX(-10px);
+}
+
+main {
+	margin-left: 400px;
+	box-sizing: border-box;
+	padding: 20px;
+}
+
+main ul {
+	width: 100%;
+	margin-bottom: 10px;
+	margin-right: 20px;
+}
+
+main ul::after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
+main ul li {
+	float: right;
+	width: 100px;
+	height: 26px;
+	margin-right: 20px;
+}
+
+main ul li a {
+	display: block;
+	width: 100%;
+	height: 100%;
+	font: bold 7px/26px 'orbitron';
+	color: #aaa;
+	letter-spacing: 1px;
+	text-align: center;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+	background: #fff;
+}
+
+main ul li.on a {
+	background: linear-gradient(45deg, #67faf3, #58abf8);
+	box-shadow: 0 5px 20px rgba(0, 255, 255, 0.527);
+	color: #fff;
+}
+
+main section {
+	width: 100%;
+}
+
+main section::after {
+	content: '';
+	display: block;
+	clear: both;
+}
+
+main section article {
+	width: 20%;
+	float: left;
+	box-sizing: border-box;
+	padding: 12px;
+}
+
+main section article div {
+	width: 100%;
+	height: 100%;
+	background: #fff;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-ms-border-radius: 4px;
+	-o-border-radius: 4px;
+	box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+	box-sizing: border-box;
+	padding: 14px;
+}
+
+main section article div img {
+	width: 100%;
+}
+
+main section article div h2 {
+	margin-top: 15px;
+	margin-bottom: 5px;
+	font: bold 11px/1 'orbitron';
+	letter-spacing: 1px;
+	color: #444;
+}
+
+main section article div p {
+	font: 10px/1.2 'arial';
+	color: #777;
+	margin-bottom: 15px;
+}
+
+@media screen and (max-width:1599px) {
+	header {
+		width: 350px;
+	}
+
+	main {
+		margin-left: 350px;
+	}
+
+	main section article {
+		width: 25%;
+	}
+}
+
+@media screen and (max-width:1199px) {
+	header {
+		position: relative;
+		width: 100%;
+		height: 80px;
+	}
+
+	header h1 {
+		font: bold 24px/1 'orbitron';
+		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		-moz-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		-o-transform: translateY(-50%);
+	}
+
+	header h1::before, header h1::after {
+		display: none;
+	}
+
+	header ul {
+		bottom:25px;
+		left: 83%; 
+	}
+
+	header ul li {
+		margin-right: 20px;
+	}
+
+	header ul li a {
+		font-size: 20px;
+	}
+
+	header ul li a span {
+		display: none;
+	}
+
+	main {
+		width: 100%;
+		margin-left: 0;
+	}
+
+	main section article {
+		width: 25%;
+	}
+}
+
+@media screen and (max-width: 899px) {
+	header ul {
+		left: 80%;
+	}
+
+	main section article {
+		width: 33.33%;
+	}
+}
+
+@media screen and (max-width: 679px) {
+	header ul {
+		left: 70%;
+	}
+
+	main section article {
+		width: 50%;
+	}
+}
+
+@media screen and (max-width: 539px) {
+	header ul {
+		display: none;
+	}
+
+	main ul {
+		margin-right: 0;
+		box-sizing: border-box;
+		padding: 0 13px;
+	}
+
+	main ul li {
+		margin-right: 2%;
+		width: 32%;
+	}
+
+	main ul li:nth-of-type(1) {
+		margin-right: 0%;
+	}
+
+	main section article {
+		width: 100%;
+	}
+}
