--- a/template/13-template/index.html
+++ b/template/13-template/index.html
@@ -9,9 +9,182 @@
 	<link rel="stylesheet" href="css/style.css" />
 	<script src="https://kit.fontawesome.com/c47106c6a7.js"></script>​
 	<script src="js/isotope.pkgd.min.js"></script>
-    <script defer src="js/main.js"></script>	
+	<script defer src="js/main.js"></script>	
 </head>
-<body>	
+<body>
+	<header>
+		<h1>DECODE LAB</h1>
+		<ul>
+			<li>
+				<a href="#">
+					<i class="fab fa-twitter-square"></i>
+					<span>Twitter</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i class="fab fa-facebook"></i>
+					<span>Facebook</span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<i class="fas fa-envelope"></i>
+					<span>E-mail</span>
+				</a>
+			</li>
+		</ul>
+	</header>
+	<main>
+		<ul>
+			<li class="on"><a href="*">ALL</a></li>
+			<li><a href=".odd">ODD</a></li>
+			<li><a href=".even">EVEN</a></li>
+		</ul>
 
+		<!-- section>article*20>div>img[src="img/p$.jpg"]+h2>lorem3^p>lorem7 -->
+		<section>
+			<article class="odd">
+				<div>
+					<img src="img/p1.jpg" alt="">
+					<h2>Lorem, ipsum dolor.</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p2.jpg" alt="">
+					<h2>Voluptas, quibusdam ea.</h2>
+					<p>Provident odio nemo harum, distinctio consequatur deserunt.</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p3.jpg" alt="">
+					<h2>Ex, tempora nisi?</h2>
+					<p>Ducimus quos omnis fugiat facilis incidunt in!</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p4.jpg" alt="">
+					<h2>Necessitatibus, culpa suscipit!</h2>
+					<p>Culpa vitae quibusdam ratione! Qui, et doloremque!</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p5.jpg" alt="">
+					<h2>Deleniti, maiores similique?</h2>
+					<p>Provident amet ut, commodi quae odit nulla.</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p6.jpg" alt="">
+					<h2>Ipsam, saepe ea?</h2>
+					<p>Aut aliquam incidunt quam similique nisi eveniet!</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p7.jpg" alt="">
+					<h2>Vero, nobis necessitatibus?</h2>
+					<p>Dolores saepe officiis nisi earum vitae ducimus?</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p8.jpg" alt="">
+					<h2>Laborum, quis aperiam.</h2>
+					<p>Ut porro cum quisquam accusamus doloremque voluptatem!</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p9.jpg" alt="">
+					<h2>Maxime, sapiente fuga!</h2>
+					<p>Asperiores, vel esse vitae praesentium enim blanditiis?</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p10.jpg" alt="">
+					<h2>Quisquam, earum non.</h2>
+					<p>Cum, magnam. In eaque accusantium consectetur facere.</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p11.jpg" alt="">
+					<h2>Vitae, dicta perspiciatis.</h2>
+					<p>Quisquam, impedit. Pariatur adipisci reprehenderit labore sequi!</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p12.jpg" alt="">
+					<h2>Ratione, accusantium praesentium.</h2>
+					<p>Magnam assumenda architecto possimus, delectus blanditiis soluta?</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p13.jpg" alt="">
+					<h2>Itaque, veniam fugiat?</h2>
+					<p>Fugiat veritatis qui quisquam architecto officiis quod!</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p14.jpg" alt="">
+					<h2>Dolores, corrupti tempora!</h2>
+					<p>Explicabo repellat fuga at corrupti illo? Quaerat?</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p15.jpg" alt="">
+					<h2>Delectus, in ut.</h2>
+					<p>Non dicta incidunt illo porro dolore natus!</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p16.jpg" alt="">
+					<h2>Reiciendis, accusamus alias!</h2>
+					<p>Non vitae dolore autem odit asperiores nulla.</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p17.jpg" alt="">
+					<h2>Repellendus, quis nobis!</h2>
+					<p>Eius nihil non porro facilis, quas impedit?</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p18.jpg" alt="">
+					<h2>Obcaecati, eius accusantium.</h2>
+					<p>Porro consequatur quo assumenda consequuntur reprehenderit placeat!</p>
+				</div>
+			</article>
+			<article class="odd">
+				<div>
+					<img src="img/p19.jpg" alt="">
+					<h2>Odit, dicta laudantium?</h2>
+					<p>Mollitia magni amet odio tenetur, quisquam ad.</p>
+				</div>
+			</article>
+			<article class="even">
+				<div>
+					<img src="img/p20.jpg" alt="">
+					<h2>Inventore, soluta quaerat.</h2>
+					<p>Optio reiciendis modi, fugit iste perspiciatis officiis!</p>
+				</div>
+			</article>
+		</section>
+	</main>
 </body>
 </html>
